Updating fixed title, added collapsable side bar + background for skills page

--- a/src/css/backgrounds.css
+++ b/src/css/backgrounds.css
@@ -1,3 +1,9 @@
 .background-homepage{
     background: #2A2F36;
 }
+
+.background-skills{
+    background: #32333A;
+    position: relative;
+    top: 55%;
+}
