--- a/src/css/fixed-title.css
+++ b/src/css/fixed-title.css
@@ -3,41 +3,48 @@
     font-family: 'Inter', sans-serif;
     position: fixed;
     width: 100%;
-    opacity: 90%;
-    margin-top: 2%;
     font-size: 130%;
     color: white;
     z-index: 100;
-    display: inline-block;
+    display: inline-block; 
+    background-color: #2A2F36;
+    padding: 1.5%;
 }
 
 .icon{
     width: 140px;
     height: 140px;
     position: relative;
-    left: 1%;
+    left: 10%;
     float: left;
 }
 
 .fixed-title-line{
     width: 60%; 
     border: 2px solid #0a072e;
+    position: absolute;
+    top: 50%;
+    left: 20%;
 }
 
 .mahdi{
     position: relative;
-    left: 2%;
+    left: 20%;
     color: #84CE77;
-    padding-top: 10%;
 }
 
 .toussi{
     position: relative;
-    left: 2%;
+    left: 20%;
 }
 
 .HSPR{
     position: relative;
-    left: 64%;
-    word-spacing: 20px;
+    left: 90%;
+    word-spacing: 20px; 
+}
+
+.mahdi-icon-wrap{
+    position: absolute;
+    top: 20%;
 }
